Change file paths to allow use of Colab

--- a/Analyze miRNA counts.ipynb
+++ b/Analyze miRNA counts.ipynb
@@ -50,7 +50,8 @@
     "\n",
     "# From now on we can access all the functionality of pandas via the name 'pd'. \n",
     "# Let's load a data table from a TSV file\n",
-    "df_wt1 = pd.read_csv('/home/jupyter/wt1.txt', sep='\\t', index_col=0)\n",
+    "file_url = 'https://raw.githubusercontent.com/moritzschaefer/jupyter-mirna-course/master/wt1.txt'\n",
+    "df_wt1 = pd.read_csv(file_url, sep='\\t', index_col=0)\n",
     "# the data pandas structures are called 'DataFrames'. Here we generate a DataFrame from a TSV file and store \n",
     "# it in the variable 'df' (you could choose any name). With the 'head' command you can see the first entries:\n",
     "\n",
@@ -248,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
