--- a/Analyze miRNA families.ipynb
+++ b/Analyze miRNA families.ipynb
@@ -52,7 +52,8 @@
     "\n",
     "# From now on we can access all the functionality of pandas via the name 'pd'. \n",
     "# Let's load a data table from a TSV file\n",
-    "df = pd.read_csv('/home/jupyter/WT1_mature_sense.grouped', sep='\\t', index_col=0)\n",
+    "file_url = 'https://raw.githubusercontent.com/moritzschaefer/jupyter-mirna-course/master/WT1_mature_sense.grouped'\n",
+    "df = pd.read_csv(file_url, sep='\\t', index_col=0)\n",
     "# the data pandas structures are called 'DataFrames'. Here we generate a DataFrame from a TSV file and store \n",
     "# it in the variable 'df' (you could choose any name). With the 'head' command you can see the first entries:\n",
     "\n",
@@ -82,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,8 +101,9 @@
    "source": [
     "# Load family data table. \n",
     "\n",
-    "### EXERCISE FOR STUDENTS - Complete the line such that the CSV from './data/mirna_families.csv' is loaded. \n",
-    "# You DON'T need the 'sep'-argument, as used above.\n",
+    "### EXERCISE FOR STUDENTS - Complete the line such that the CSV from 'data/mirna_families.csv' is loaded. \n",
+    "file_url = 'https://raw.githubusercontent.com/moritzschaefer/jupyter-mirna-course/master/...'\n",
+    "# You DON'T need the 'sep'-argument, as used above, since the file uses comma-separation instead of tab-separation\n",
     "family_df = ...\n",
     "\n",
     "### EXERCISE: Show the first lines of the family-DataFrame\n",
@@ -266,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
